# pscgen

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOPENBLAS.cmake
data/: D400_hog.csv
device/: wav.h  wavmain.c
mobisys2015/data/action/: D200_hog.csv  D750_hog.csv
mobisys2015/scripts/: utilities.py
paper/: README.md
paper/data/action/: D100_hog.csv  D10_hog.csv  D50_hog.csv  kth_test_hog_small.csv
paper/data/voice/: .gitignore  download.sh
paper/scripts/: forest_test.py  kth_test.py  nnu_test.py  optimize.py  pca.py  run_results.py  surat_test.py  utilities.py  voice_results.py  weak_learn.py
paper/scripts/parser/: parse_kth.py  parse_voice.py
src/: CMakeLists.txt
src/c/: CMakeLists.txt
src/c/pscgen/: classifier.c  classifier.h  csv.c  csv.h  dgemv.c  float_conversion.c  float_conversion.h  generator.c  generator.h  half.c  half.h  nnu.c  nnu.h  nnu_classifier.c  nnu_classifier.h  nnu_dict.c  nnu_dict.h  nnu_generator.c  nnu_generator.h  nnu_standalone.h  nnu_storage.c  nnu_storage.h  pipeline.c  pipeline.h  pscgen.c  pscgen.h  standalone.h  standalone_char.c  standalone_char.h  standalone_types.h  standalone_types_char.c  standalone_types_char.h  test.c  test.csv  util.c  util.h
src/c/pscgen/linalg/: dgemv.c  linalg.c  linalg.h  linalg.h.gch
src/c/pscgen/linalg/libf2c/: Makefile
src/cpp/: CMakeLists.txt
src/cpp/pscgen/: '  half.hpp  pscgen.cpp  pscgen.h  sortindex.hpp
src/js/: VD.json  nnu.js  package.json  tables.json
src/python/: CMakeLists.txt  atom_test.py  kth_test.py  nnu_test.py  nnu_updater.py  pca_test.py  pscgen.py  pscgen_c.c  pypscgen.c  requirements.txt  setup.py  setup.py.in  test.py  utilities.py
src/tests/: CMakeLists.txt  ]\  classifier_test.c  generator_test.c  nnu.h  pnnu_test.cpp  pscgen_test.c  standalone.c  test.csv
testbitscheme/: test.c
